<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LakeSnes</string>
    <string name="emu_pause">Pause</string>
    <string name="emu_reset">Reset</string>
    <string name="emu_fast_forward">Fast Forward</string>
    <string name="emu_state_save">Save State</string>
    <string name="emu_state_load">Load State</string>
    <string name="rom_select">Select ROM</string>
    <string name="settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="video_settings">Video Settings</string>
    <string name="about">About</string>
</resources>